--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
